...
        label.textColor = .grayFive
        return label
    }()

    lazy var formButton: UIButton = {
        let button = UIButton()
        button.setTitle("Adicionar", for: .normal)
        button.backgroundColor = .green
        button.addTarget(self, action: #selector(pushAddFlow), for: .touchDown)
        return button
    }()

    override init(frame: CGRect) {
...
