...
import UIKit

class InputNameOnboardingViewController: OnboardingTemplateViewController, UITextFieldDelegate {

    let textField: UITextField = {
        let textField = UITextField()
        textField.placeholder = "Ex: Jones"
        textField.attributedPlaceholder = NSAttributedString(string: "Ex: Jones", attributes: [NSAttributedString.Key.foregroundColor : UIColor.grayThree.withAlphaComponent(0.3)])
        textField.font = .systemFont(ofSize: 17, weight: .medium)
        textField.textColor = UIColor.grayThree.withAlphaComponent(0.5)
        textField.backgroundColor = UIColor.lightGreen.withAlphaComponent(0.3)
        textField.layer.cornerRadius = 15
        textField.setLeftPadding(16)
...
