...
    }()

    let nextButton: UIButton = {
        let button = UIButton()
        button.backgroundColor = .green
        button.layer.cornerRadius = 15
        button.setTitle("Continue", for: .normal)

        let label = button.titleLabel
        label!.font = .systemFont(ofSize: 20, weight: .semibold)
        label!.textColor = .grayOne

        return button
...
